docs/v7/security/tls.adoc
---
title: Configure TLS
layout: docs-adoc
menu: security
---

=== Introduction

This section provides instructions on how to enable Transport Layer Security so that requests can be served over the HTTPS protocol.

WARNING: HTTP is not secure: credentials can be sniffed by a man-in-the-middle attack. **It is paramount to use HTTPS**

NOTE: This section is about securing HTTP requests between Clients and RESTHeart. Read link:/docs/mongodb-rest/secure-connection-to-mongodb/[Secure connection to MongoDB] for more information on how to secure the connection between RESTHeart and MongoDB.

=== The HTTPS listener

There are many ways of enabling HTTS; for instance you can setup a web server such as nginx as a reverse proxy in front of RESTHeart or you may rely on cloud services that provides load balancers that manages SSL for you (such are Amazon WS or Google Cloud).

In any case, restheart is able to expose directly the HTTS protocol and this is done configuring the https listener. This is the suggested configuration for small systems.

The following configuration file except shows the involved options:

[source,bash]
----
https-listener:
    enabled: true
    host: 0.0.0.0
    port: 4443
    keystore-file: /path/to/keystore/file
    keystore-password: secret
    certpassword: secret
----

To enable https configure the https listener using the following options:

1.  `/https-listener/enabled` _true_ to enable it
2.  `/https-listener/host` the ip where to bind the listener
3.  `/https-listener/port` the port where to bind the listener:

A SSL certificate must configured in order to enable the https listener.

=== Configure the SSL certificate

The SSL certificate must be added to the java keystore set by the `keystore-file` configuration property.

Two scripts are available to help configuring the keystore.

==== generate-certauthority-and-keystore.sh

This is useful for testing purposes. It generates a CA and uses it to issue a SSL certificate, finally generating the keystore file.

Download the script from link:https://raw.githubusercontent.com/SoftInstigate/restheart/master/core/bin/generate-certauthority-and-keystore.sh[generate-certauthority-and-keystore.sh]

After having generated the keystore file and configured RESTHeart to use it, you need to install the CA root certificate into your OS.

For example, in OSX:

1. Open up `Keychain Access` application by searching it on `Spotlight`
2. Select `File > Import Items`. Navigate to CA root certificate file generated by the script. Select `System` as "Destination Keychain".
3. Right click on the certificate in Keychain Access and select `Get Info`
    - Expand the Trust section
    - Under When using this certificate select `Always Trust`.

==== convert-letsencrypt-java-keystore.sh

link:https://letsencrypt.org[Let's Encrypt] is a popular and nonprofit Certificate Authority providing free TLS certificates.

This script generates the java keystore from Let's Encrypt certificate archive.

Download the script from link:https://raw.githubusercontent.com/SoftInstigate/restheart/master/core/bin/convert-letsencrypt-java-keystore.sh[convert-letsencrypt-java-keystore.sh]